# Sidekick

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  sidekick.db
src/: main.rs
