[package]
name = "sidekick"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "builder", "cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = "0.4"
chrono-tz = "0.10"
